--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,5 @@
-FROM public.ecr.aws/lambda/python
-COPY ./ ${LAMBDA_TASK_ROOT}
+FROM public.ecr.aws/lambda/python:3.12
+COPY requirements.txt ${LAMBDA_TASK_ROOT}
 RUN pip install --no-cache-dir -r requirements.txt
+COPY ./ ${LAMBDA_TASK_ROOT}
 CMD [ "app.lambda_handler" ]
